--- a/static/index.html
+++ b/static/index.html
@@ -434,6 +434,9 @@
                                 </div>
                             </div>
                         </div>
+                        <p class="text-center py-2 text-[#2663EB] text-sm select-none pointer-events-none">
+                            Drag notes to folder to move
+                        </p>
                     </div>
 
                     <!-- Sidebar Footer -->
@@ -561,7 +564,8 @@
                 <div class="flex-1 flex flex-col overflow-hidden relative">
 
                     <!-- View: Note List (Folder Content) -->
-                    <div v-if="rightPanelMode === 'list'"
+                    <div v-if="rightPanelMode === 'list'" @dragover.prevent
+                        @drop.prevent="handleDrop(currentFolderId, $event)"
                         class="flex-1 flex flex-col h-full bg-slate-50 dark:bg-[#2E3440] overflow-hidden relative">
                         <!-- List Header -->
                         <div
@@ -606,14 +610,34 @@
                                 <button
                                     @click="setSortOption('direction', sortOption.direction === 'asc' ? 'desc' : 'asc')"
                                     class="flex items-center gap-1 px-2 py-1.5 text-slate-500 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400 hover:bg-slate-100 dark:hover:bg-[#3B4252] rounded-lg transition-all"
-                                    :title="sortOption.direction === 'asc' ? 'Oldest First (Click for Newest)' : 'Newest First (Click for Oldest)'">
+                                    :title="sortOption.field === 'title' 
+                                        ? (sortOption.direction === 'asc' ? 'A to Z' : 'Z to A')
+                                        : (sortOption.direction === 'asc' ? 'Oldest First' : 'Newest First')">
                                     <span class="material-symbols-rounded text-[18px]">
-                                        {{ sortOption.direction === 'asc' ? 'arrow_upward' : 'arrow_downward' }}
+                                        {{ sortOption.field === 'title'
+                                        ? (sortOption.direction === 'asc' ? 'arrow_downward' : 'arrow_upward')
+                                        : (sortOption.direction === 'asc' ? 'arrow_upward' : 'arrow_downward')
+                                        }}
                                     </span>
                                     <span class="text-[10px] font-semibold uppercase">
-                                        {{ sortOption.direction === 'asc' ? 'Old' : 'New' }}
+                                        {{ sortOption.field === 'title'
+                                        ? (sortOption.direction === 'asc' ? 'A-Z' : 'Z-A')
+                                        : (sortOption.direction === 'asc' ? 'Old' : 'New')
+                                        }}
                                     </span>
                                 </button>
+                            </div>
+                            <!-- Import Hint/Button -->
+                            <div
+                                class="flex items-center gap-1 pl-2 border-l border-slate-200 dark:border-[#3B4252] ml-2">
+                                <button onclick="document.getElementById('hidden-file-input').click()"
+                                    class="flex items-center gap-1 px-2 py-1.5 text-slate-400 hover:text-blue-500 hover:bg-slate-100 dark:hover:bg-[#3B4252] rounded-lg transition-all"
+                                    title="Import Files (or Drag & Drop)">
+                                    <span class="material-symbols-rounded text-[18px]">upload_file</span>
+                                    <span class="text-[10px] font-semibold uppercase">Import</span>
+                                </button>
+                                <input id="hidden-file-input" type="file" multiple class="hidden"
+                                    onchange="handleFiles(this.files); this.value = null;">
                             </div>
                         </div>
 
@@ -775,6 +799,11 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+
+                        <!-- Persistent Drag Drop Hint -->
+                        <div class="text-center py-6 text-[#2663EB] text-sm select-none pointer-events-none">
+                            Drag text files here to import
                         </div>
 
                         <!-- FAB -->
