--- a/static/index.html
+++ b/static/index.html
@@ -826,10 +826,10 @@
                             class="h-10 border-b border-slate-100 dark:border-[#434C5E] bg-white dark:bg-[#24292F] px-4 flex items-center gap-1 flex-none z-10 transition-colors duration-300">
                             <!-- BACK BUTTON -->
                             <button @click="backToList()"
-                                class="mr-3 text-slate-500 hover:text-blue-600 dark:text-slate-400 dark:hover:text-blue-400 flex items-center gap-1 pr-3 border-r border-slate-200 dark:border-[#434C5E] h-5"
-                                title="Back to List">
-                                <span class="material-symbols-rounded text-[20px]">arrow_back</span>
-                                <span class="text-xs font-bold uppercase hidden sm:inline">Back</span>
+                                class="mr-3 text-slate-500 hover:text-blue-600 dark:text-slate-400 dark:hover:text-blue-400 flex items-center gap-0.5 pr-3 border-r border-slate-200 dark:border-[#434C5E] h-5"
+                                title="Back to Notes">
+                                <span class="material-symbols-rounded text-[18px]">arrow_back_ios_new</span>
+                                <span class="text-xs font-bold uppercase hidden sm:inline">Notes</span>
                             </button>
 
                             <button @mousedown.prevent="formatText('bold')"
